feat: fulltext search

--- a/ui/public/locales/cs/translation.json
+++ b/ui/public/locales/cs/translation.json
@@ -22,8 +22,13 @@
     "Create": "Vytvořit",
     "Edit": "Upravit",
     "Search": "Hledat...",
+    "SearchNotes": "Hledat poznámky...",
+    "TypeToSearch": "Zadejte text pro vyhledávání",
     "ClearSearch": "Smazat",
     "NoResults": "Nic nenalezeno",
+    "Navigate": "navigace",
+    "Open": "otevřít",
+    "Close": "zavřít",
     "SessionExpired": "Relace vypršela. Přihlaste se znovu.",
     "DarkMode": "Tmavý režim",
     "Logout": "Odhlásit",
