--- a/ui/public/locales/en/translation.json
+++ b/ui/public/locales/en/translation.json
@@ -22,8 +22,13 @@
     "Create": "Create",
     "Edit": "Edit",
     "Search": "Search...",
+    "SearchNotes": "Search notes...",
+    "TypeToSearch": "Type to search your notes",
     "ClearSearch": "Clear search",
-    "NoResults": "No results",
+    "NoResults": "No results found",
+    "Navigate": "navigate",
+    "Open": "open",
+    "Close": "close",
     "SessionExpired": "Your session expired. Please log in again.",
     "DarkMode": "Dark mode",
     "Logout": "Logout",
