feat: add support to drag and drop the Tabs of notes

--- a/ui/public/locales/cs/translation.json
+++ b/ui/public/locales/cs/translation.json
@@ -62,6 +62,7 @@
     "DropToRemoveFromFolder": "Přetáhněte sem pro odebrání",
     "LastSaved": "Uloženo:",
     "SaveShortcut": "Uložit (Ctrl+S)",
+    "Controls": "Zobrazit ovládání",
     "DaysRemaining": "{{days}} dní",
     "DeletedToday": "Smazáno dnes",
     "WillBeDeleted": "Bude trvale smazáno po 30 dnech v koši",
